--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,10 +11,12 @@ packages = [
 python = "^3.7"
 
 [tool.poetry.dev-dependencies]
+flake8 = "^3.7.9"
+pytest-cov = "^2.8.1"
 
+[tool.poetry.scripts]
+page-loader = "page_loader.scripts.page_loader:main"
 [build-system]
 requires = ["poetry>=0.12"]
 build-backend = "poetry.masonry.api"
 
-[tool.poetry.scripts]
-page-loader = "page_loader.scripts.page_loader:main"
