--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ packages = [
 [tool.poetry.dependencies]
 python = "^3.7"
 pylint = "^2.4.4"
+requests = "^2.23.0"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^3.7.9"
