--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,13 +11,14 @@ packages = [
 python = "^3.7"
 pylint = "^2.4.4"
 requests = "^2.23.0"
+beautifulsoup4 = "^4.8.2"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^3.7.9"
 pytest-cov = "^2.8.1"
 
 [tool.poetry.scripts]
-page-loader = "page_loader.scripts.page_loader:main"
+page-loader = "page_loader.script.page_loader:main"
 [build-system]
 requires = ["poetry>=0.12"]
 build-backend = "poetry.masonry.api"
