--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ python = "^3.7"
 pylint = "^2.4.4"
 requests = "^2.23.0"
 beautifulsoup4 = "^4.8.2"
+progress = "^1.5"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^3.7.9"
